# hello_rust

./: Cargo.toml
e2e/: README.md  fractal100.json  mandelbrot.http
src/: lib.rs  main.rs
src/mandelbrot/: mod.rs
src/mandelbrot/boundary/: request_handler.rs
src/mandelbrot/control/: mandelbrot.rs
tests/: integration_test.rs
